Added "This is Me" poster and portfolio section

--- a/index.html
+++ b/index.html
@@ -24,13 +24,20 @@
         </div>
     </section>
 
-    <!-- Portfolio Section -->
-    <section class="portfolio">
-        <div class="container">
-            <h2>Portfolio</h2>
-            <p>Coming soon! Stay tuned for my latest works in design, web development, and more.</p>
+  <!-- Portfolio Section -->
+<section class="portfolio">
+    <div class="container">
+        <h2>Portfolio</h2>
+
+        <div class="project">
+            <img src="poster1.jpg" alt="This is Me Poster">
+            <h3>This is Me</h3>
+            <p>A cinematic poster introducing who I am — a creator driven by design, growth, and impact.</p>
         </div>
-    </section>
+
+    </div>
+</section>
+
 
     <!-- LearnLog Section -->
     <section class="learn-log">
