--- a/index.html
+++ b/index.html
@@ -1,57 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adwaith - Designer & Developer</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Adwaith | Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Montserrat&display=swap" rel="stylesheet">
+  <link rel="icon" href="images/a.png" type="image/png">
 </head>
 <body>
-    <!-- Header Section -->
-    <header>
-        <div class="container">
-            <h1 class="name">Adwaith</h1>
-            <p class="title">Designer & Developer</p>
-        </div>
-    </header>
+  <nav>
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
 
-    <!-- About Section -->
-    <section class="about">
-        <div class="container">
-            <h2>About Me</h2>
-            <p>Hello, I’m Adwaith — a passionate designer and developer based in India. I specialize in creative visuals, logo design, and exploring web technologies. Follow my journey as I learn, create, and share.</p>
-        </div>
-    </section>
+  <header id="about">
+    <h1>Hi, I'm Adwaith</h1>
+    <p>A graphic designer who blends retro aesthetics with modern strategy...</p>
+  </header>
 
-  <!-- Portfolio Section -->
-<section class="portfolio">
-    <div class="container">
-        <h2>Portfolio</h2>
-
-        <div class="project">
-            <img src="poster1.jpg" alt="This is Me Poster">
-            <h3>This is Me</h3>
-            <p>A cinematic poster introducing who I am — a creator driven by design, growth, and impact.</p>
-        </div>
-
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="project-card">
+      <img src="images/poster1.jpg" alt="Poster: This Is Me">
+      <div class="caption">This is Me – an introductory poster with a touch of AI and identity</div>
     </div>
-</section>
+  </section>
 
+  <section id="skills">
+    <h2>Skills</h2>
+    <div class="skills-grid">
+      <img src="images/photoshop.png" alt="Photoshop">
+      <img src="images/illustrator.png" alt="Illustrator">
+      <img src="images/html.png" alt="HTML">
+      <img src="images/c.png" alt="C">
+      <img src="images/canva.png" alt="Canva">
+    </div>
+  </section>
 
-    <!-- LearnLog Section -->
-    <section class="learn-log">
-        <div class="container">
-            <h2>My Learning Journal</h2>
-            <p>Follow my journey of learning HTML, CSS, JS, and design as I document every step.</p>
-        </div>
-    </section>
-
-    <!-- Footer Section -->
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Adwaith | All Rights Reserved</p>
-        </div>
-    </footer>
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Phone: <a href="tel:+919947411723">+91 99474 11723</a></p>
+    <p>Email: <a href="mailto:adwaithkumar4506@gmail.com">adwaithkumar4506@gmail.com</a></p>
+    <p>Instagram: <a href="https://www.instagram.com/espoir.13_">espoir.13_</a></p>
+  </section>
 </body>
 </html>
