--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Adwaith | Portfolio</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Montserrat&display=swap" rel="stylesheet">
+  <link href="fonts/CanelaCondensed-Bold-Trial.otf" rel="stylesheet" type="font/otf">
+  <link href="fonts/Satoshi-Bold.otf" rel="stylesheet" type="font/otf">
   <link rel="icon" href="images/a.png" type="image/png">
 </head>
 <body>
