--- a/index.html
+++ b/index.html
@@ -3,51 +3,73 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Adwaith | Portfolio</title>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Adwaith - Graphic Designer</title>
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=CanelaCondensed-Bold-Trial&family=Satoshi-Bold&display=swap" rel="stylesheet">
+
+  <!-- Stylesheet -->
   <link rel="stylesheet" href="style.css">
-  <link href="fonts/CanelaCondensed-Bold-Trial.otf" rel="stylesheet" type="font/otf">
-  <link href="fonts/Satoshi-Bold.otf" rel="stylesheet" type="font/otf">
-  <link rel="icon" href="images/a.png" type="image/png">
+
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-
-  <header id="about">
-    <h1>Hi, I'm Adwaith</h1>
-    <p>A graphic designer who blends retro aesthetics with modern strategy...</p>
+  <!-- Header Section -->
+  <header>
+    <div class="logo">
+      <img src="poster1.jpg" alt="Adwaith's Logo">
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <section id="projects">
+  <!-- About Section -->
+  <section id="about" class="section">
+    <h2>About Me</h2>
+    <p>I'm Adwaith, a graphic designer who blends retro aesthetics with modern strategy. I craft bold visuals and meaningful identities using tools like Photoshop, Illustrator, and a touch of AI. Whether it's branding or storytelling, I design with clarity, emotion, and purpose.</p>
+  </section>
+
+  <!-- Skills Section -->
+  <section id="skills" class="section">
+    <h2>Skills</h2>
+    <div class="skills-icons">
+      <img src="photoshop.png" alt="Photoshop Icon">
+      <img src="illustrator.png" alt="Illustrator Icon">
+      <img src="html.png" alt="HTML Icon">
+      <img src="c.png" alt="C Programming Icon">
+      <img src="canva.png" alt="Canva Icon">
+    </div>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects" class="section">
     <h2>Projects</h2>
     <div class="project-card">
-      <img src="images/poster1.jpg" alt="Poster: This Is Me">
-      <div class="caption">This is Me – an introductory poster with a touch of AI and identity</div>
+      <img src="poster1.jpg" alt="My Project">
+      <div class="caption">
+        <h3>Introduction Poster</h3>
+        <p>A creative introduction poster that reflects my personal brand and design philosophy.</p>
+      </div>
     </div>
   </section>
 
-  <section id="skills">
-    <h2>Skills</h2>
-    <div class="skills-grid">
-      <img src="images/photoshop.png" alt="Photoshop">
-      <img src="images/illustrator.png" alt="Illustrator">
-      <img src="images/html.png" alt="HTML">
-      <img src="images/c.png" alt="C">
-      <img src="images/canva.png" alt="Canva">
-    </div>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Phone: <a href="tel:+919947411723">+91 99474 11723</a></p>
+  <!-- Contact Section -->
+  <section id="contact" class="section">
+    <h2>Contact Me</h2>
+    <p>Phone: +91 99474 11723</p>
     <p>Email: <a href="mailto:adwaithkumar4506@gmail.com">adwaithkumar4506@gmail.com</a></p>
-    <p>Instagram: <a href="https://www.instagram.com/espoir.13_">espoir.13_</a></p>
+    <p>Instagram: <a href="https://www.instagram.com/espoir.13_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">espoir.13_</a></p>
   </section>
+
+  <!-- Footer Section -->
+  <footer>
+    <p>© 2025 Adwaith. All rights reserved.</p>
+  </footer>
 </body>
 </html>
