--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Header Section -->
   <header>
     <div class="logo">
-      <img src="poster1.jpg" alt="Adwaith's Logo">
+      <img src="https://github.com/Espoir13/portfolio-site/blob/main/poster1.jpg" alt="Adwaith's Logo">
     </div>
     <nav>
       <ul>
@@ -39,11 +39,11 @@
   <section id="skills" class="section">
     <h2>Skills</h2>
     <div class="skills-icons">
-      <img src="photoshop.png" alt="Photoshop Icon">
-      <img src="illustrator.png" alt="Illustrator Icon">
-      <img src="html.png" alt="HTML Icon">
-      <img src="c.png" alt="C Programming Icon">
-      <img src="canva.png" alt="Canva Icon">
+      <img src="https://github.com/Espoir13/portfolio-site/blob/main/photoshop.png" alt="Photoshop Icon">
+      <img src="https://github.com/Espoir13/portfolio-site/blob/main/illustrator.png" alt="Illustrator Icon">
+      <img src="https://github.com/Espoir13/portfolio-site/blob/main/html.png" alt="HTML Icon">
+      <img src="https://github.com/Espoir13/portfolio-site/blob/main/c.png" alt="C Programming Icon">
+      <img src="https://github.com/Espoir13/portfolio-site/blob/main/canva.png" alt="Canva Icon">
     </div>
   </section>
 
